# project-caldera

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  pytest.ini  requirements.txt
src/insights/: EVAL_STRATEGY.md  Makefile  README.md  __init__.py  __main__.py  cli.py  data_fetcher.py  generator.py  pyproject.toml
src/insights/docs/: E2E_VERIFICATION.md
src/insights/evaluation/: __init__.py
src/insights/evaluation/ground-truth/: scenario-basic.json  scenario-complex.json  scenario-security.json
src/insights/evaluation/llm/: __init__.py  orchestrator.py
src/insights/formatters/: __init__.py  base.py  html.py  markdown.py
src/insights/queries/: authorship_summary.sql  blast_radius_hotspots.sql  circular_dependencies.sql  component_dependencies.sql  component_hotspots.sql  component_inventory.sql  composite_risk_hotspots.sql  contributor_hotspots.sql  coupling_hotspots.sql  coupling_weighted_debt.sql  coverage_gap_hotspots.sql  cross_tool_complex_smelly.sql  cross_tool_complex_vulnerable.sql  dependency_health_summary.sql  devskim_by_category.sql  devskim_hotspot_files.sql  devskim_summary.sql  devskim_top_rules.sql  directory_hotspots.sql  directory_largest.sql  directory_smelliest.sql  distribution_complexity.sql  distribution_concentration.sql  distribution_loc.sql  distribution_smells.sql  dotcover_assemblies.sql  dotcover_low_coverage_files.sql  dotcover_namespaces.sql  dotcover_summary.sql  duplication_hotspots.sql  file_hotspots.sql  function_complexity_hotspots.sql  git_sizer_lfs_candidates.sql  git_sizer_summary.sql  git_sizer_violations.sql  gitleaks_by_rule.sql  gitleaks_hotspot_files.sql  gitleaks_summary.sql  iac_affected_files.sql  iac_by_type.sql  (+35 more)
src/insights/scripts/: __init__.py  evaluate.py  extract_top_insights.py
src/insights/scripts/checks/: __init__.py  accuracy.py  completeness.py  data_integrity.py  format_quality.py
src/insights/sections/: __init__.py  authorship_risk.py  base.py  blast_radius.py  circular_dependencies.py  code_duplication.py  code_inequality.py  code_quality_rules.py  code_size_hotspots.py  component_inventory.py  composite_risk.py  coupling_analysis.py  coupling_debt.py  coverage_gap.py  cross_tool.py  dependency_health.py  devskim_security.py  directory_analysis.py  directory_structure.py  distribution_insights.py  dotcover_coverage.py  executive_summary.py  file_hotspots.py  function_complexity.py  git_sizer.py  iac_misconfigs.py  import_dependencies.py  knowledge_risk.py  language_coverage.py  license_compliance.py  module_health.py  repo_health.py  roslyn_violations.py  secrets.py  sonarqube_deep_dive.py  technical_debt_summary.py  tool_coverage_dashboard.py  tool_readiness.py  vulnerabilities.py
src/insights/templates/: base.html.j2  base.md.j2
src/insights/templates/sections/: authorship_risk.html.j2  authorship_risk.md.j2  blast_radius.html.j2  blast_radius.md.j2  circular_dependencies.html.j2  circular_dependencies.md.j2  code_duplication.html.j2  code_duplication.md.j2  code_inequality.html.j2  code_inequality.md.j2  code_quality_rules.html.j2  code_quality_rules.md.j2  code_size_hotspots.html.j2  (+61 more)
src/insights/tests/: __init__.py  conftest.py  test_checks.py  test_component_inventory.py  test_data_fetcher.py  test_e2e.py  test_formatters.py  test_generator.py  test_import_circular_sections.py  test_llm_observability.py  test_sections.py  test_tool_readiness.py
src/tools/layout-scanner/: .gitignore  =0.1.1  BLUEPRINT.md  EVAL_STRATEGY.md  Makefile  README.md  pyproject.toml  requirements.txt
(+2181 files in other folders)
