[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caldera-insights"
version = "0.1.0"
description = "Consolidated reporting component for Project Caldera"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Project Caldera Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duckdb>=0.9.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
all = [
    "insights[dev]",
    "insights[openai]",
    "insights[anthropic]",
]

[project.scripts]
insights = "insights.cli:main"
insights-evaluate = "insights.scripts.evaluate:main"

[project.urls]
Repository = "https://github.com/project-caldera/insights"

[tool.setuptools]
packages = ["insights", "insights.formatters", "insights.sections", "insights.scripts", "insights.scripts.checks", "insights.evaluation", "insights.evaluation.llm", "insights.evaluation.llm.judges", "insights.evaluation.llm.providers", "insights.evaluation.llm.observability", "insights.tests"]
package-dir = {"insights" = "."}

[tool.setuptools.package-data]
insights = [
    "templates/*.j2",
    "templates/**/*.j2",
    "queries/*.sql",
    "evaluation/ground-truth/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["insights"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
